--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,9 @@
   --color-background: var(--background);
   --colol-icons: var(--icons);
   --color-divider: var(--divider);
+  --color-component-primary: var(--component-primary);
+  --color-component-primary-foreground: var(--component-primary-foreground);
+  --color-component-border: var(--component-border);
 
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
@@ -48,10 +51,13 @@
 }
 
 :root {
-  --hover-anchor: oklch(0.928 0.006 264.531);
+  --hover-anchor: oklch(0.92 0 49);
   --background: oklch(1 0 0);
   --icons: oklch(0.141 0.005 285.823);
   --divider: oklch(0.141 0.005 285.823);
+  --component-primary: oklch(0.58 0.23 9);
+  --component-primary-foreground: oklch(0.985 0 0);
+  --component-border: oklch(0.141 0.005 285.823);
 
   --radius: 0.625rem;
   --foreground: oklch(0.145 0 0);
@@ -91,6 +97,9 @@
   --background: oklch(0.145 0 0);
   --icons: oklch(0.985 0.002 247.839);
   --divider: oklch(1 0 0);
+  --component-primary: oklch(0.58 0.23 9);
+  --component-primary-foreground: oklch(0.985 0 0);
+  --component-border: oklch(0.708 0 0);
 
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
@@ -136,5 +145,42 @@
   }
   main {
     @apply max-w-[1200px] mx-auto;
+  }
+  section {
+    @apply max-w-[1200px] mx-auto;
+  }
+}
+
+.shine {
+  position: relative;
+  display: inline-block;
+  overflow: hidden; /* keep shine inside */
+}
+
+.shine::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -150%;
+  width: 150%;
+  height: 100%;
+  background: linear-gradient(
+    120deg,
+    transparent 0%,
+    oklch(0.95 0.05 90 / 0.3) 50%,
+    transparent 100%
+  );
+  transform: skewX(-20deg);
+  animation: shine 2s infinite;
+  pointer-events: none; /* clicks pass through */
+}
+
+/* Keyframes for sliding shine */
+@keyframes shine {
+  0% {
+    left: -150%;
+  }
+  100% {
+    left: 150%;
   }
 }
