--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,10 @@
   --color-component-primary: var(--component-primary);
   --color-component-primary-foreground: var(--component-primary-foreground);
   --color-component-border: var(--component-border);
+  --color-component-secondary: var(--component-secondary);
+  --color-secondary-text: var(--secondary-text);
+  --color-destructive: var(--destructive);
+  --color-ghost: var(--ghost);
 
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
@@ -31,7 +35,6 @@
   --color-ring: var(--ring);
   --color-input: var(--input);
   --color-border: var(--border);
-  --color-destructive: var(--destructive);
   --color-accent-foreground: var(--accent-foreground);
   --color-accent: var(--accent);
   --color-muted-foreground: var(--muted-foreground);
@@ -58,6 +61,10 @@
   --component-primary: oklch(0.58 0.23 9);
   --component-primary-foreground: oklch(0.985 0 0);
   --component-border: oklch(0.141 0.005 285.823);
+  --component-secondary: oklch(0.141 0.005 285.823);
+  --secondary-text: oklch(0.92 0 49);
+  --destructive: oklch(57.7% 0.245 27.325);
+  --ghost: oklch(0.5 0 0);
 
   --radius: 0.625rem;
   --foreground: oklch(0.145 0 0);
@@ -73,7 +80,6 @@
   --muted-foreground: oklch(0.556 0 0);
   --accent: oklch(0.97 0 0);
   --accent-foreground: oklch(0.205 0 0);
-  --destructive: oklch(0.577 0.245 27.325);
   --border: oklch(0.922 0 0);
   --input: oklch(0.922 0 0);
   --ring: oklch(0.708 0 0);
@@ -99,7 +105,11 @@
   --divider: oklch(1 0 0);
   --component-primary: oklch(0.58 0.23 9);
   --component-primary-foreground: oklch(0.985 0 0);
-  --component-border: oklch(0.708 0 0);
+  --component-border: oklch(1 0 0);
+  --component-secondary: oklch(1 0 0);
+  --secondary-text: oklch(0.205 0 0);
+  --destructive: oklch(57.7% 0.245 27.325);
+  --ghost: oklch(0.5 0 0);
 
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
@@ -114,7 +124,6 @@
   --muted-foreground: oklch(0.708 0 0);
   --accent: oklch(0.269 0 0);
   --accent-foreground: oklch(0.985 0 0);
-  --destructive: oklch(0.704 0.191 22.216);
   --border: oklch(1 0 0 / 10%);
   --input: oklch(1 0 0 / 15%);
   --ring: oklch(0.556 0 0);
@@ -148,39 +157,5 @@
   }
   section {
     @apply max-w-[1200px] mx-auto;
-  }
-}
-
-.shine {
-  position: relative;
-  display: inline-block;
-  overflow: hidden; /* keep shine inside */
-}
-
-.shine::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: -150%;
-  width: 150%;
-  height: 100%;
-  background: linear-gradient(
-    120deg,
-    transparent 0%,
-    oklch(0.95 0.05 90 / 0.3) 50%,
-    transparent 100%
-  );
-  transform: skewX(-20deg);
-  animation: shine 2s infinite;
-  pointer-events: none; /* clicks pass through */
-}
-
-/* Keyframes for sliding shine */
-@keyframes shine {
-  0% {
-    left: -150%;
-  }
-  100% {
-    left: 150%;
   }
 }
