--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,7 @@
   --color-secondary-text: var(--secondary-text);
   --color-destructive: var(--destructive);
   --color-ghost: var(--ghost);
+  --color-highlight: var(--highlight);
 
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
@@ -65,6 +66,7 @@
   --secondary-text: oklch(0.92 0 49);
   --destructive: oklch(57.7% 0.245 27.325);
   --ghost: oklch(0.5 0 0);
+  --highlight: oklch(80.152% 0.00009 271.152);
 
   --radius: 0.625rem;
   --foreground: oklch(0.145 0 0);
@@ -110,6 +112,7 @@
   --secondary-text: oklch(0.205 0 0);
   --destructive: oklch(57.7% 0.245 27.325);
   --ghost: oklch(0.5 0 0);
+  --highlight: oklch(80.152% 0.00009 271.152);
 
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
